feat(imgui): make object tranlsatable with imgui

--- a/hello-open-gl/imgui.ini
+++ b/hello-open-gl/imgui.ini
@@ -5,6 +5,11 @@ Collapsed=0
 
 [Window][Hello, world!]
 Pos=392,159
-Size=434,254
+Size=367,226
+Collapsed=0
+
+[Window][Settings]
+Pos=60,60
+Size=339,94
 Collapsed=0
 
