--- a/hello-open-gl/hello-open-gl.vcxproj.filters
+++ b/hello-open-gl/hello-open-gl.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="src\scenes\SceneCube.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\scenes\ScenePoint.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shaders\Basic.shader" />
@@ -488,6 +491,7 @@
     </None>
     <None Include="res\shaders\Cube.shader" />
     <None Include="res\shaders\Light.shader" />
+    <None Include="res\shaders\Point.shader" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Renderer.h">
@@ -1397,6 +1401,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\scenes\SceneCube.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\scenes\ScenePoint.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
