feat(marching cubes): added new basic scene

--- a/hello-open-gl/hello-open-gl.vcxproj
+++ b/hello-open-gl/hello-open-gl.vcxproj
@@ -84,6 +84,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\scenes\SceneMarchingCube.cpp" />
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\scenes\SceneCube.cpp" />
     <ClCompile Include="src\scenes\ScenePoint.cpp" />
@@ -112,6 +113,7 @@
     <None Include="res\shaders\Basic.shader" />
     <None Include="res\shaders\Light.shader" />
     <None Include="res\shaders\Cube.shader" />
+    <None Include="res\shaders\MarchingCube.shader" />
     <None Include="res\shaders\Point.shader" />
     <None Include="src\vendor\glm\detail\func_common.inl" />
     <None Include="src\vendor\glm\detail\func_common_simd.inl" />
@@ -251,6 +253,7 @@
     <None Include="src\vendor\glm\gtx\wrap.inl" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\scenes\SceneMarchingCube.h" />
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\scenes\SceneCube.h" />
     <ClInclude Include="src\scenes\ScenePoint.h" />
