feat(explosion): added explosion geometry shader

--- a/hello-open-gl/hello-open-gl.vcxproj
+++ b/hello-open-gl/hello-open-gl.vcxproj
@@ -120,6 +120,7 @@
   <ItemGroup>
     <None Include="..\..\notes\model-for-project\model.pts" />
     <None Include="res\shaders\Basic.shader" />
+    <None Include="res\shaders\Explosion.shader" />
     <None Include="res\shaders\Light.shader" />
     <None Include="res\shaders\Cube.shader" />
     <None Include="res\shaders\GeometryDemo.shader" />
