--- a/hello-open-gl/hello-open-gl.vcxproj
+++ b/hello-open-gl/hello-open-gl.vcxproj
@@ -92,6 +92,7 @@
   <ItemGroup>
     <ClCompile Include="src\Mesh.cpp" />
     <ClCompile Include="src\Model.cpp" />
+    <ClCompile Include="src\scenes\SceneComputeDemo.cpp" />
     <ClCompile Include="src\scenes\SceneModel.cpp" />
     <ClCompile Include="src\scenes\SceneGeometryDemo.cpp" />
     <ClCompile Include="src\Camera.cpp" />
@@ -266,6 +267,7 @@
   <ItemGroup>
     <ClInclude Include="src\Mesh.h" />
     <ClInclude Include="src\Model.h" />
+    <ClInclude Include="src\scenes\SceneComputeDemo.h" />
     <ClInclude Include="src\scenes\SceneModel.h" />
     <ClInclude Include="src\scenes\SceneGeometryDemo.h" />
     <ClInclude Include="src\Camera.h" />
