feat(compute shader): render quad with texture at the size of the window

--- a/hello-open-gl/hello-open-gl.vcxproj
+++ b/hello-open-gl/hello-open-gl.vcxproj
@@ -128,6 +128,7 @@
     <None Include="res\shaders\GeometryDemo.shader" />
     <None Include="res\shaders\Model.shader" />
     <None Include="res\shaders\Point.shader" />
+    <None Include="res\shaders\Simple.shader" />
     <None Include="src\vendor\glm\detail\func_common.inl" />
     <None Include="src\vendor\glm\detail\func_common_simd.inl" />
     <None Include="src\vendor\glm\detail\func_exponential.inl" />
