--- a/hello-open-gl/hello-open-gl.vcxproj.filters
+++ b/hello-open-gl/hello-open-gl.vcxproj.filters
@@ -515,6 +515,7 @@
     <None Include="res\shaders\Model.shader" />
     <None Include="res\shaders\Explosion.shader" />
     <None Include="res\shaders\Compute.shader" />
+    <None Include="res\shaders\Simple.shader" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Renderer.h">
