--- a/hello-open-gl/hello-open-gl.vcxproj
+++ b/hello-open-gl/hello-open-gl.vcxproj
@@ -94,6 +94,7 @@
     <ClCompile Include="src\Model.cpp" />
     <ClCompile Include="src\scenes\SceneComputeDemo.cpp" />
     <ClCompile Include="src\scenes\SceneComputeDemoOptimized.cpp" />
+    <ClCompile Include="src\scenes\SceneForestFire.cpp" />
     <ClCompile Include="src\scenes\SceneModel.cpp" />
     <ClCompile Include="src\scenes\SceneGeometryDemo.cpp" />
     <ClCompile Include="src\Camera.cpp" />
@@ -125,6 +126,7 @@
     <None Include="res\shaders\Compute.shader" />
     <None Include="res\shaders\ComputeOptimized.shader" />
     <None Include="res\shaders\Explosion.shader" />
+    <None Include="res\shaders\ForestFire.shader" />
     <None Include="res\shaders\Light.shader" />
     <None Include="res\shaders\Cube.shader" />
     <None Include="res\shaders\GeometryDemo.shader" />
@@ -273,6 +275,7 @@
     <ClInclude Include="src\Model.h" />
     <ClInclude Include="src\scenes\SceneComputeDemo.h" />
     <ClInclude Include="src\scenes\SceneComputeDemoOptimized.h" />
+    <ClInclude Include="src\scenes\SceneForestFire.h" />
     <ClInclude Include="src\scenes\SceneModel.h" />
     <ClInclude Include="src\scenes\SceneGeometryDemo.h" />
     <ClInclude Include="src\Camera.h" />
