--- a/hello-open-gl/imgui.ini
+++ b/hello-open-gl/imgui.ini
@@ -10,6 +10,11 @@ Collapsed=0
 
 [Window][Settings]
 Pos=7,11
-Size=454,141
+Size=454,186
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=650,20
+Size=550,680
 Collapsed=0
 
