feat(solar system): added simple sphere

--- a/hello-open-gl/hello-open-gl.vcxproj
+++ b/hello-open-gl/hello-open-gl.vcxproj
@@ -101,6 +101,7 @@
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\scenes\SceneCube.cpp" />
     <ClCompile Include="src\scenes\ScenePoint.cpp" />
+    <ClCompile Include="src\scenes\SceneSolarSystem.cpp" />
     <ClCompile Include="src\scenes\SceneTexture2D.cpp" />
     <ClCompile Include="src\scenes\Scene.cpp" />
     <ClCompile Include="src\scenes\SceneClearColor.cpp" />
@@ -283,6 +284,7 @@
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\scenes\SceneCube.h" />
     <ClInclude Include="src\scenes\ScenePoint.h" />
+    <ClInclude Include="src\scenes\SceneSolarSystem.h" />
     <ClInclude Include="src\scenes\SceneTexture2D.h" />
     <ClInclude Include="src\scenes\SceneClearColor.h" />
     <ClInclude Include="src\scenes\Scene.h" />
