--- a/hello-open-gl/hello-open-gl.vcxproj.filters
+++ b/hello-open-gl/hello-open-gl.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClCompile Include="src\ResourceManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\SpriteRenderer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shaders\Basic.shader" />
@@ -536,6 +539,7 @@
     <None Include="res\shaders\Simple.shader" />
     <None Include="res\shaders\ComputeOptimized.shader" />
     <None Include="res\shaders\ForestFire.shader" />
+    <None Include="res\shaders\Sprite.shader" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Renderer.h">
@@ -1487,6 +1491,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\ResourceManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\SpriteRenderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
