chore(project structure): rename res/ to assets/

--- a/hello-open-gl/hello-open-gl.vcxproj
+++ b/hello-open-gl/hello-open-gl.vcxproj
@@ -128,19 +128,18 @@
     <ClCompile Include="src\VertexArray.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\notes\model-for-project\model.pts" />
-    <None Include="res\shaders\Basic.shader" />
-    <None Include="res\shaders\Compute.shader" />
-    <None Include="res\shaders\ComputeOptimized.shader" />
-    <None Include="res\shaders\Explosion.shader" />
-    <None Include="res\shaders\ForestFire.shader" />
-    <None Include="res\shaders\Light.shader" />
-    <None Include="res\shaders\Cube.shader" />
-    <None Include="res\shaders\GeometryDemo.shader" />
-    <None Include="res\shaders\Model.shader" />
-    <None Include="res\shaders\Point.shader" />
-    <None Include="res\shaders\Simple.shader" />
-    <None Include="res\shaders\Sprite.shader" />
+    <None Include="assets\shaders\Basic.shader" />
+    <None Include="assets\shaders\Compute.shader" />
+    <None Include="assets\shaders\ComputeOptimized.shader" />
+    <None Include="assets\shaders\Explosion.shader" />
+    <None Include="assets\shaders\ForestFire.shader" />
+    <None Include="assets\shaders\Light.shader" />
+    <None Include="assets\shaders\Cube.shader" />
+    <None Include="assets\shaders\GeometryDemo.shader" />
+    <None Include="assets\shaders\Model.shader" />
+    <None Include="assets\shaders\Point.shader" />
+    <None Include="assets\shaders\Simple.shader" />
+    <None Include="assets\shaders\Sprite.shader" />
     <None Include="src\vendor\glm\detail\func_common.inl" />
     <None Include="src\vendor\glm\detail\func_common_simd.inl" />
     <None Include="src\vendor\glm\detail\func_exponential.inl" />
