--- a/hello-open-gl/hello-open-gl.vcxproj.filters
+++ b/hello-open-gl/hello-open-gl.vcxproj.filters
@@ -126,6 +126,9 @@
     <ClCompile Include="src\domains\breakout\components\Ball.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\domains\breakout\components\Brick.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\shaders\Basic.shader" />
@@ -1511,6 +1514,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\domains\breakout\components\Ball.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\domains\breakout\components\Brick.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
